fixtures/vyper/simple/overflow/negative/i32.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-2147483648"
#!           ],
#!           "caller": "0x3F52F3794D2533a35640d67001F3C3EE527bEC72"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int32) -> int32:
    return witness - 1
